service.yml
apiVersion: v1
kind: Service
metadata: 
  name: weather-news-service
  namespace: weather
spec:
  selector:
    app: weather-news 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080 
  type: ClusterIP
