ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: weather-news-ingress
  namespace: weather
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: localhost
    http:
      paths:  
      - path: /
        pathType: Prefix
        backend:
          service:
            name: weather-news-service
            port:
              number: 80
